sample/asm/errors/more_than_one_main_function.asm
.function: main/1
    izero 0
    return
.end

.function: main/2
    izero 0
    return
.end
